[GTK] REGRESSION: Kinetic scrolling on touchpad doesn't work with async scrolling off https://bugs.webkit.org/show_bug.cgi?id=224182

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-05-15
Reviewed by Michael Catanzaro.

Don't clear the scroll history every time we scroll, that defeats the whole point of having
the scroll history.

* platform/generic/ScrollAnimatorGeneric.cpp:
(WebCore::ScrollAnimatorGeneric::scrollToPositionWithoutAnimation):

Canonical link: https://commits.webkit.org/237767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277539 268f45cc-cd09-0410-ab3c-d52691b4dbfc