Source/WebCore/platform/generic/ScrollAnimatorGeneric.cpp
@@ -65,7 +65,6 @@ ScrollAnimatorGeneric::~ScrollAnimatorGeneric() = default;
 bool ScrollAnimatorGeneric::scrollToPositionWithoutAnimation(const FloatPoint& position, ScrollClamping clamping)
 {
     m_kineticAnimation->stop();
-    m_kineticAnimation->clearScrollHistory();
     return ScrollAnimator::scrollToPositionWithoutAnimation(position, clamping);
 }
 
